--- a/default.hbs
+++ b/default.hbs
@@ -4,13 +4,7 @@
     {{! Document Settings }}
     <meta http-equiv="Content-Type" content="text/html" charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-    <script>
-        // UNCOMMENT AND USE YOUR VARIABLES FOR DISQUS AND GOOGLE ANALYTICS
-        // var d_id  = '',
-        //     g_id  = 'UA-XXXXXXXX-X', // Format: UA-########-#, Example: UA-11220899-1
-        //     g_url = 'XXXXXXX.XXX' // Format: #####.####, Example: webdesignporto.com
-    </script>
-
+    
     {{! Page Meta }}
     <title>{{meta_title}}</title>
     <meta name="description" content="{{meta_description}}" />
@@ -20,8 +14,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
     {{! Styles'n'Scripts }}
-    <link rel="stylesheet" type="text/css" href="{{asset "highlighter/prettify.css"}}" />
     <link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}" />
+    <link rel="stylesheet" type="text/css" href="{{asset "highlightjs/styles/atom-one-dark.css"}}" />
+    <style>
+        pre {
+            word-wrap: normal;
+            -moz-hyphens: none;
+            -ms-hyphens: none;
+            -webkit-hyphens: none;
+            hyphens: none;
+            font-size: 0.7em;
+            line-height: 1.3em;
+            padding: 0px;
+        }
+        pre code, pre tt {
+            white-space: pre;
+        }
+    </style>
 
     {{! Ghost outputs important style and meta data with this tag }}
     {{ghost_head}}
@@ -54,7 +63,9 @@
     {{ghost_foot}}
 
     {{! Scripts }}
-    <script type='text/javascript' src="{{asset 'highlighter/prettify.js'}}"></script>
     <script type='text/javascript' src="{{asset '/js/shell.js'}}"></script>
+    <script type='text/javascript' src="{{asset 'highlightjs/highlight.pack.js'}}"></script>
+    <script>hljs.initHighlightingOnLoad();</script>
+     
 </body>
 </html>
