Restructured sass files

--- a/assets/scss/theme/_footer.scss
+++ b/assets/scss/theme/_footer.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    8. Footer - The bottom of every page
    ========================================================================== */
+@import 'colors';
 
 .site-footer {
     position: relative;
