--- a/assets/scss/theme/_general.scss
+++ b/assets/scss/theme/_general.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    2. General - Setting up some base styles
    ========================================================================== */
+@import 'colors';
 
 html {
     height: 100%;
