--- a/assets/scss/theme/_media.scss
+++ b/assets/scss/theme/_media.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    9. Media Queries - Smaller than 900px
    ========================================================================== */
+@import 'colors';
 
 @media only screen and (max-width: 900px) {
 
