--- a/assets/scss/theme/_pagination.scss
+++ b/assets/scss/theme/_pagination.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    7. Pagination - Tools to let you flick between pages
    ========================================================================== */
+@import 'colors';
 
 /* The main wrapper for our pagination links */
 .pagination {
