--- a/assets/scss/theme/_post.scss
+++ b/assets/scss/theme/_post.scss
@@ -1,6 +1,8 @@
 /* ==========================================================================
    5. Single Post - When you click on an individual post
    ========================================================================== */
+@import 'colors';
+
 .post {
     &-template .post {
         margin-top: 0;
