--- a/assets/scss/theme/_theme.scss
+++ b/assets/scss/theme/_theme.scss
@@ -1,6 +1,8 @@
 /* ==========================================================================
    4. General - The main styles for the the theme
    ========================================================================== */
+@import 'colors';
+
 #site-head {
     position: relative;
     display: table;
