--- a/assets/scss/theme/_utilites.scss
+++ b/assets/scss/theme/_utilites.scss
@@ -1,6 +1,7 @@
 /* ==========================================================================
    3. Utilities - These things get used a lot
    ========================================================================== */
+@import 'colors';
 
 /* Hides shit */
 .hidden {
