--- a/assets/scss/theme/_icons.scss
+++ b/assets/scss/theme/_icons.scss
@@ -1,7 +1,9 @@
 /* ==========================================================================
    1. Icons - Sets up the icon font and respective classes
    ========================================================================== */
-@font-face {
+@import 'colors';
+
+   @font-face {
     font-family: 'icons';
     src:url('../fonts/icons.eot');
     src:url('../fonts/icons.eot?#iefix') format('embedded-opentype'),
